fixing the alignment in experience & education section

--- a/src/components/Projects/ProjectStyles.css
+++ b/src/components/Projects/ProjectStyles.css
@@ -1,17 +1,62 @@
-.swiper {
-  width: 100%;
-  padding-top: 50px;
-  padding-bottom: 50px;
+/* Extra Small Devices, Phones */
+@media only screen and (min-width: 420px) {
+  .swiper {
+    width: 100%;
+    padding-top: 0px;
+    padding-bottom: 50px;
+  }
+
+  .swiper-slide {
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+  }
 }
 
-.swiper-slide {
-  background-position: center;
-  background-size: cover;
-  width: 400px;
-  height: 550px;
+/* Small Devices, Tablets */
+@media only screen and (min-width: 768px) {
+  .swiper {
+    width: 100%;
+    padding-top: 0px;
+    padding-bottom: 50px;
+  }
+
+  .swiper-slide {
+    background-position: center;
+    background-size: cover;
+    width: 400px;
+    height: 550px;
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+  }
 }
 
-.swiper-slide img {
-  display: block;
-  width: 100%;
+/* Medium Devices, Desktops */
+@media only screen and (min-width: 992px) {
+  .swiper {
+    width: 100%;
+    padding-top: 0px;
+    padding-bottom: 50px;
+  }
+
+  .swiper-slide {
+    background-position: center;
+    background-size: cover;
+    width: 400px;
+    height: 550px;
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+  }
 }
